# hands_on_VR_CSC2026

./: README.md
CSC2026_VR/hands_on_1/: hands_on_1.ipynb
CSC2026_VR/hands_on_1/simulation/: CMakeLists.txt  exampleB01.cc  init_vis.mac  vis.mac
CSC2026_VR/hands_on_1/simulation/include/: B01Run.hh  B01RunAction.hh
CSC2026_VR/hands_on_1/simulation/pcruns/: b01_cells_mode-1_run0_N10000000.tsv  b01_summary_10M.tsv
CSC2026_VR/hands_on_1/simulation/src/: B01DetectorConstruction.cc  B01Run.cc  B01RunAction.cc
CSC2026_VR/hands_on_2/: hands_on_2.ipynb
CSC2026_VR/hands_on_2/simulation/: CMakeLists.txt  exampleGB02.cc  run_100k_seedA.mac  run_10k_seedA.mac  run_10k_seedB.mac  run_10k_seedC.mac  run_1k.mac  run_30k_seedA.mac  run_50k_seedA.mac
CSC2026_VR/hands_on_2/simulation/include/: GB02EventAction.hh  GB02RunAction.hh  GB02SteppingAction.hh
CSC2026_VR/hands_on_2/simulation/pcruns/: summary_100M.tsv
CSC2026_VR/hands_on_2/simulation/src/: GB02ActionInitialization.cc  GB02DetectorConstruction.cc  GB02EventAction.cc  GB02RunAction.cc  GB02SteppingAction.cc
